Many useful marks

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "moment": "^2.22.1",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1",
     "vue-sessionstorage": "^1.0.0",
+    "vue-time-picker": "^0.2.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
