--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
     "moment": "^2.22.1",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.3.1",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1",
     "vue-sessionstorage": "^1.0.0",
