--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vee-validate": "^2.1.0-beta.6",
     "vue-axios": "^2.1.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
