--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "vue": "^2.5.2",
     "vue-chartjs": "^3.3.1",
     "vue-cookie": "^1.1.4",
+    "vue-google-autocomplete": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue-sessionstorage": "^1.0.0",
     "vue-time-picker": "^0.2.6",
+    "vue2-google-maps": "^0.10.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
