--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "chart.js": "^2.7.2",
-    "moment": "^2.22.1",
-    "vue": "^2.5.2",
-    "vue-chartjs": "^3.3.1",
+    "chart.js": "^2.7.3",
+    "moment": "^2.22.2",
+    "vue": "^2.5.17",
+    "vue-chartjs": "^3.4.0",
     "vue-cookie": "^1.1.4",
     "vue-google-autocomplete": "^1.1.0",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.2",
     "vue-sessionstorage": "^1.0.0",
     "vue-time-picker": "^0.2.6",
     "vuex": "^3.0.1"
@@ -24,47 +24,47 @@
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "axios": "^0.18.0",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
+    "chalk": "^2.4.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.3",
+    "node-notifier": "^5.3.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
+    "portfinder": "^1.0.19",
     "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.1.6",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
-    "semver": "^5.3.0",
+    "semver": "^5.6.0",
     "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.5.8",
-    "vee-validate": "^2.1.0-beta.6",
-    "vue-axios": "^2.1.1",
-    "vue-loader": "^13.3.0",
+    "vee-validate": "^2.1.3",
+    "vue-axios": "^2.1.4",
+    "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.5.17",
     "vue-yandex-maps": "^0.7.15",
     "vueify": "^9.4.1",
-    "vuetify": "^1.0.14",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "vuetify": "^1.3.9",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-dev-server": "^2.11.3",
+    "webpack-merge": "^4.1.4"
   },
   "engines": {
     "node": ">= 6.0.0",
